codex-rs/tui/src/chatwidget/tests/snapshots/codex_tui__chatwidget__tests__timers__thread_timers_popup_keeps_selected_timer_prompt_visible.snap
---
source: tui/src/chatwidget/tests/timers.rs
expression: popup
---
  Thread timers
  Review an timer, then press Enter to delete it.

› 1. delay 0s • one-shot  Give me a random animal name.
                          Press Enter to delete this timer.

  Press enter to confirm or esc to go back
